--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -2,13 +2,13 @@
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 custom_features=""
-export_filter="scenes"
+export_filter="resources"
 export_files=PoolStringArray( "res://Assets/Fonts/BasicBlockFont.tres", "res://Assets/Fonts/BasicBlockFont14.tres", "res://Assets/Fonts/BasicBlockFont24.tres", "res://Assets/Fonts/BasicBlockFont48.tres", "res://Assets/Fonts/PressStart2P-Regular.ttf", "res://Assets/Images/Pieces/IPiece.png", "res://Assets/Images/Pieces/JPiece.png", "res://Assets/Images/Pieces/LPiece.png", "res://Assets/Images/Pieces/OPiece.png", "res://Assets/Images/Pieces/SPiece.png", "res://Assets/Images/Pieces/TPiece.png", "res://Assets/Images/Pieces/ZPiece.png", "res://Assets/Images/RetmisBlockSprite.png", "res://Assets/Images/RetmisGenericParticle.png", "res://Assets/Images/RetmisGhostBlockSprite.png", "res://Assets/Images/RetmisInGame.png", "res://Assets/Images/TetrisBanner.png", "res://Assets/Music/RetmisTheme.mp3", "res://Assets/Videos/RetmisMainMenuVideo.webm", "res://Globals/Constants.gd", "res://Globals/PlayerInfo.gd", "res://Globals/SaveManager.gd", "res://Globals/ScoreManager.gd", "res://Grid/Grid.gd", "res://Grid/GridRenderer.gd", "res://Scenes/Game/Game.gd", "res://Scenes/Game/Game.tscn", "res://Scenes/Game/PauseScreen/PauseMenu.gd", "res://Scenes/Game/PauseScreen/PauseMenu.tscn", "res://Scenes/Game/PauseScreen/PauseMusicTween.gd", "res://Scenes/Game/ScoreTween.gd", "res://Scenes/Game/TetrisGrid/RetmisGrid.gd", "res://Scenes/Game/TetrisGrid/RetmisGrid.tscn", "res://Scenes/UI/GameOver/GameLose.gd", "res://Scenes/UI/GameOver/GameLose.tscn", "res://Scenes/UI/GameOver/GameWin.gd", "res://Scenes/UI/GameOver/GameWin.tscn", "res://Scenes/UI/MainMenu/MainMenu.gd", "res://Scenes/UI/MainMenu/MainMenu.tscn", "res://Scenes/UI/MainMenu/MusicVolumeTween.gd", "res://Scenes/UI/MainMenu/NewGameMenu/NewGame.gd", "res://Scenes/UI/MainMenu/NewGameMenu/NewGame.tscn", "res://Scenes/UI/MainMenu/OpenPopupTween.gd", "res://Scenes/UI/MainMenu/Scoreboard/ScoreLabel.tscn", "res://Scenes/UI/MainMenu/Scoreboard/Scoreboard.gd", "res://Scenes/UI/MainMenu/Scoreboard/Scoreboard.tscn", "res://Scenes/UI/MainMenu/SettingsMenu/SettingsMenu.gd", "res://Scenes/UI/MainMenu/SettingsMenu/SettingsMenu.tscn", "res://Scenes/UI/MainMenu/VideoPlayerScript.gd", "res://Scenes/UI/Particles/BlockClearParticle.gd", "res://Scenes/UI/Particles/BlockClearParticle.tscn", "res://Scenes/UI/Themes/RetmisTheme.tres", "res://Tetrominos/ActivePiece.gd", "res://Tetrominos/Piece.gd", "res://Tetrominos/PieceRandomizer.gd", "res://Tetrominos/Piece_I.gd", "res://Tetrominos/Piece_J.gd", "res://Tetrominos/Piece_L.gd", "res://Tetrominos/Piece_O.gd", "res://Tetrominos/Piece_S.gd", "res://Tetrominos/Piece_T.gd", "res://Tetrominos/Piece_Z.gd", "res://Utils/MatrixUtils.gd", "res://default_bus_layout.tres", "res://default_env.tres" )
 include_filter=""
 exclude_filter=""
-export_path="../../Retmis2.exe"
+export_path="../../Retmis3.exe"
 script_export_mode=1
 script_encryption_key=""
 
